EDU-1405 Support fullscreen mode in media-analysis plugin (and fix chapters text collapsed)

--- a/src/components/media-player/media-player.less
+++ b/src/components/media-player/media-player.less
@@ -47,7 +47,7 @@
   }
 }
 
-.MediaPlayer-progressAndControls {
+.MediaPlayer-underPlayerContent {
   &.is-fullscreen {
     position: absolute;
     width: 100%;
